--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,45 +1,24 @@
 * {
     box-sizing: border-box;
 }
-
+  
 body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    background: white;
-}
-
-.page {
-    color: #777777;
-    position: relative;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.header-set {
-    position: relative;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 34px;
+    color: #777;
+    background: url("../images/hexabump.png");
+  }
+  
+ 
+  /* general */
+  
+.mycontainer {
     width: 100%;
-    height: 80px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    max-width: 960px;
+    margin: 0 auto;
+    clear: both;
 }
-
-.header {
-    text-align: center;
-    position: absolute;
-    width: 50%;
-    height: 100%;
-    background: white;
-} 
-
-.header-1 {
-    top: 0;
-    left: 0;
-}
-
-.header-2 {
-    top: 0;
-    right: 0;
-    padding: 28px;
-} 
 
 a {
     color: #777777;
@@ -47,71 +26,135 @@ a {
     font-style: italic;
 }
 
-#header-name {
-    height: 100%;
-    width: 33.3%;
-    margin: 0 auto;
-    padding: 22px;
-    font-size: 28px;
-    color: white;
-    background: #4aaaa5;
-}
-
-#nav ul {
-    margin: 0;
-    padding: 0;
-    color: #cccccc;
-}
-
-#nav ul li {
-    font-size: 16px;
-    margin-right: 6px;
-    list-style-type: none;
-    display: inline;
-}
-
-#nav li:not(:first-child):before {
-    content: "|  ";
-}
-
-.main {
-    position:relative;
-    width: 100%;
-    height: 596px;
-    background-image: url('../images/hexabump.png');
-    background-size: auto;
-    background-color: darkslategray;
-    background-repeat: repeat;
-}
-
-.wrapper {
-    position: relative;
-    width: 66.67%; 
-    height: 66%;
-    margin: 0 auto;
-    overflow: auto;
-    top: 8%;
-    padding: 18px 28px 18px 28px;
-    background: white;
-    border: 2px solid #dddddd;
-}
-
 h1 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 26px;
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-weight: 700;
     color: #4aaaa5;
+    padding-bottom: 10px;
+    font-size: 36px;
+    margin-bottom: 10px;
+    line-height: 49px;
+    border-bottom: 3px solid #ddd;
 }
 
-hr {
-    margin: 20px;
-    border: 1px solid  #dddddd;
+.tab { 
+    display:inline-block; 
+    margin-left: 40px; 
+}
+
+/* header */
+  
+#myheader {
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    margin: 0 0 30px;
+    overflow: auto;
+    color: #fff;
+    background: #fff;
+    border-bottom: 2px solid #ccc;
+}
+  
+
+#navbar {
+    float: left;
+    width: 250px;
+    height: 90px;
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 90px;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    background: #4aaaa5;
+  }
+  
+  nav {
+    float: right;
+    margin-top: 25px;
+  }
+  
+  nav a {
+    display: inline-block;
+    padding-left: 15px;
+    margin-left: 15px;
+    line-height: 18px;
+    color: #999;
+    text-decoration: none;
+    border-left: 1px solid #efefef;
+  }
+  
+  nav a:first-child {
+    border-left: 0 none;
+  }
+  
+  /* main */
+  
+#main-container {
+    padding-top: 130px;
+    min-height: calc(100vh - 70px);
+}
+  
+.main-section {
+    float: left;
+    width: 100%;
+    max-width: 960px;
+    overflow: auto;
+    padding: 30px;
+    margin: 0 0 40px;
+    background: #fff;
+    border: 1px solid #ddd;
 }
 
 img {
     float: left;
-    padding: 0 25px 0 0;
-    width: 190px;
-    height: 100px;
+    padding: 0 25px 25px 0;
+    width: 250px;
+    height: 250px;
+}
+
+
+  /* footer */
+  
+  footer {
+    padding: 30px 0;
+    clear: both;
+    font-size: 12px;
+    color: #fff;
+    color: #ccc;
+    text-align: center;
+    background: #666;
+    border-top: 8px solid #4aaaa5;
+    height: 60px;
+  }
+  
+  
+  /* portfolio page */
+  
+  .imgfolio {
+    float: left;
+    padding: 10px;
+    width: 180px;
+    height: 160px;
+}
+  
+  /* contact page */
+  
+form  {
+    color: #777777;
+    font-size: 14px;
+    font-weight: bolder;
+    line-height: 175%;
+}
+
+.textboxid {
+    width: 100%;
+}
+
+#messageboxid {
+    height:90px;
+    width: 100%;
 }
 
 p   {
@@ -120,15 +163,22 @@ p   {
     line-height: 150%;
     float: left;
 }
-
-.tab { 
-    display:inline-block; 
-    margin-left: 40px; 
+.button {
+    background-color: #4aaaa5;
+    border: none;
+    border-radius: 12px;
+    color: white;
+    margin-top: 10px;
+    padding: 8px 15px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
 }
 
-#footer {
-    width:100%;
-    background: #666666;;
-    height: 60px;
-    border-top: 5px solid #4aaaa5;
+.button:hover {
+    background-color: gray;
+    color: white;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
