--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ img {
 
   /* footer */
   
-  footer {
+footer {
     padding: 30px 0;
     clear: both;
     font-size: 12px;
@@ -132,7 +132,7 @@ img {
   
   /* portfolio page */
   
-  .imgfolio {
+.imgfolio {
     float: left;
     padding: 10px;
     width: 180px;
@@ -182,3 +182,24 @@ p   {
     color: white;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+
+@media screen and (max-width: 968px) {
+  
+    .main-section {
+        max-width: 760;
+    }
+  }
+
+@media screen and (max-width: 768px) {
+
+    .main-section {
+        max-width: 625px;
+    }
+  }
+
+  @media screen and (max-width: 640px) {
+  
+    .main-section {
+        max-width: 530px;
+    }
+  }
