--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,20 +186,24 @@ p   {
 @media screen and (max-width: 968px) {
   
     .main-section {
-        max-width: 760;
+        max-width: 768px;
     }
   }
 
 @media screen and (max-width: 768px) {
 
     .main-section {
-        max-width: 625px;
+        max-width: 640px;
     }
   }
 
   @media screen and (max-width: 640px) {
-  
-    .main-section {
-        max-width: 530px;
+    
+    #main-container {
+        padding-top: 5px;
+    }
+
+    #myheader{
+        position: static;
     }
   }
