--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,11 +20,6 @@ body {
     clear: both;
 }
 
-a {
-    color: #777777;
-    text-decoration: underline;
-    font-style: italic;
-}
 
 h1 {
     font-family: Georgia, Times, "Times New Roman", serif;
@@ -73,19 +68,23 @@ h1 {
   nav {
     float: right;
     margin-top: 25px;
+    margin-left: 15px;
   }
   
-  nav a {
-    display: inline-block;
-    padding-left: 15px;
-    margin-left: 15px;
+  nav ul li {
+    display: inline;
+    border-left: 1px solid #efefef;
+    }
+
+  nav ul li a {
+    padding-left: 20px;
+    margin-right: 15px;
     line-height: 18px;
     color: #999;
     text-decoration: none;
-    border-left: 1px solid #efefef;
   }
   
-  nav a:first-child {
+  nav ul li:first-child {
     border-left: 0 none;
   }
   
@@ -114,6 +113,11 @@ img {
     height: 250px;
 }
 
+a {
+    color: #777777;
+    text-decoration: underline;
+    font-style: italic;
+}
 
   /* footer */
   
